Updated footer with links

--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
   </head>
   <body>
     <footer>
-      Coded by <a href="https://github.com/bassomaa">Bassma</a>, code
-      open-sourced on <a href=""></a>
+      Coded by <a href="https://github.com/bassomaa" target="_blank">Bassma</a>,
+      code open-sourced on
+      <a
+        href="https://github.com/bassomaa/ai-recipe-generator-shecodes"
+        target="_blank"
+        >GitHub</a
+      >, and hosted on
+      <a href="https://ai-givesyou-recipes.netlify.app/" target="_blank"
+        >Netlify</a
+      >
     </footer>
   </body>
 </html>
